# MarketingAC

./: .env  .env.example  .gitignore  pyproject.toml
data/: resultados.json
marketintel/: cli.py  collector.py  config.json  exporter.py
marketintel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
