[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketintel"
version = "0.1.0"
description = "CLI de inteligencia de mercado local — scraping y análisis con IA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas>=2.0",
]

[project.scripts]
marketintel = "marketintel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["marketintel*"]